@@ -5,3 +5,5 @@
  * Icon to hide keyfile input
  * New lock button
  * Setting to hide lock button in user interface
+ * Clickable links in notes
+
