@@ -6,6 +6,7 @@ KeePassDX(2.5beta31)
  * Icon to hide keyfile input
  * New lock button
  * Setting to hide lock button in user interface
+ * Clickable links in notes
 
 KeePassDX(2.5beta30)
  * Fix Lock after screen off (wait 1.5 seconds)
